# llm_adaptive_router

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
llm_adaptive_builder/: __init__.py  models.py  utils.py
llm_adaptive_router/: __init__.py  models.py  prompts.py  router.py  utils.py
tests/: test_router.py
